--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jarred Taylor</title>
     <link rel="icon" href="icons/favicon.ico" />
-    <link rel="stylesheet" href="icons/font-awesome/css/all.css" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/1f251ad47b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="page-wrapper">
