--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="content-wrapper">
         <h1>Hello, I'm Jarred</h1>
         <p>
-        Podcast Host <span class="divider"> | </span> Software Developer <span class="divider"> | </span> Real Estate Investor
+        Podcast Host <span class="divider"> | </span> Software Engineer <span class="divider"> | </span> Commercial REI
         </p>
         <a href="https://twitter.com/jtaylor6_">
           <i class="icon fab fa-twitter fa-2x"></i>
